Finishing touches within the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,235 +1,15 @@
-version: '2.1'
+version: '2'
 
 services:
-  zoo1:
-    image: zookeeper:3.4.9
-    hostname: zoo1
-    ports:
-      - "2181:2181"
+  # this is our kafka cluster.
+  kafka-cluster:
+    image: landoop/fast-data-dev:cp3.3.0
     environment:
-        ZOO_MY_ID: 1
-        ZOO_PORT: 2181
-        ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./docker-data/zoo1/data:/data
-      - ./docker-data/zoo1/datalog:/datalog
-
-  zoo2:
-    image: zookeeper:3.4.9
-    hostname: zoo2
+      ADV_HOST: 127.0.0.1         # Change to 192.168.99.100 if using Docker Toolbox
+      RUNTESTS: 0                 # Disable Running tests so the cluster starts faster
     ports:
-      - "2182:2182"
-    environment:
-        ZOO_MY_ID: 2
-        ZOO_PORT: 2182
-        ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./docker-data/zoo2/data:/data
-      - ./docker-data/zoo2/datalog:/datalog
-
-  zoo3:
-    image: zookeeper:3.4.9
-    hostname: zoo3
-    ports:
-      - "2183:2183"
-    environment:
-        ZOO_MY_ID: 3
-        ZOO_PORT: 2183
-        ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./docker-data/zoo3/data:/data
-      - ./docker-data/zoo3/datalog:/datalog
-
-
-  kafka1:
-    image: confluentinc/cp-kafka:5.0.0
-    hostname: kafka1
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
-      KAFKA_BROKER_ID: 1
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./docker-data/kafka1/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-
-  kafka2:
-    image: confluentinc/cp-kafka:5.0.0
-    hostname: kafka2
-    ports:
-      - "9093:9093"
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka2:19093,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
-      KAFKA_BROKER_ID: 2
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./docker-data/kafka2/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-
-  kafka3:
-    image: confluentinc/cp-kafka:5.0.0
-    hostname: kafka3
-    ports:
-      - "9094:9094"
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka3:19094,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
-      KAFKA_BROKER_ID: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./docker-data/kafka3/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-
-  schema1:
-    image: confluentinc/cp-schema-registry:5.0.0
-    hostname: schema1
-    ports:
-      - "8081:8081"
-    environment:
-      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: "zoo1:2181,zoo2:2182,zoo3:2183"
-      SCHEMA_REGISTRY_HOST_NAME: schema1
-      SCHEMA_REGISTRY_LISTENERS: schema1:8081
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-      - kafka1
-      - kafka2
-      - kafka3
-
-  proxy1:
-    image: confluentinc/cp-kafka-rest:5.0.0
-    hostname: proxy1
-    ports:
-      - "8082:8082"
-    environment:
-      KAFKA_REST_HOST_NAME: proxy1
-      KAFKA_REST_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
-      KAFKA_REST_SCHEMA_REGISTRY_URL: "schema1:8081"
-      KAFKA_REST_LISTENERS: localhost:8082
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-      - kafka1
-      - kafka2
-      - kafka3
-      - schema1
-
-  connect1:
-    image: confluentinc/cp-kafka-connect:5.0.0
-    hostname: connect1
-    ports:
-      - "8091:8091"
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: "kafka1:19092,kafka2:19093,kafka3:19094"
-      CONNECT_REST_PORT: 8091
-      CONNECT_GROUP_ID: "bots"
-      CONNECT_CONFIG_STORAGE_TOPIC: "bots-storage-topic"
-      CONNECT_OFFSET_STORAGE_TOPIC: "bots-offset-topic"
-      CONNECT_STATUS_STORAGE_TOPIC: "bots-status-topic"
-      CONNECT_KEY_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_VALUE_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect1
-      CONNECT_PLUGIN_PATH: "/usr/share/java"
-    volumes:
-      - ./botgen/logs/:/tmp/botgen/logs
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-      - kafka1
-      - kafka2
-      - kafka3
-      - schema1
-
-  connect2:
-    image: confluentinc/cp-kafka-connect:5.0.0
-    hostname: connect2
-    ports:
-      - "8092:8092"
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: "kafka1:19092,kafka2:19093,kafka3:19094"
-      CONNECT_REST_PORT: 8092
-      CONNECT_GROUP_ID: "bots"
-      CONNECT_CONFIG_STORAGE_TOPIC: "bots-storage-topic"
-      CONNECT_OFFSET_STORAGE_TOPIC: "bots-offset-topic"
-      CONNECT_STATUS_STORAGE_TOPIC: "bots-status-topic"
-      CONNECT_KEY_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_VALUE_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect2
-      CONNECT_PLUGIN_PATH: "/usr/share/java"
-    volumes:
-      - ./botgen/logs/:/tmp/botgen/logs
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-      - kafka1
-      - kafka2
-      - kafka3
-      - schema1
-
-  connect3:
-    image: confluentinc/cp-kafka-connect:5.0.0
-    hostname: connect3
-    ports:
-      - "8093:8093"
-    environment:
-      CONNECT_BOOTSTRAP_SERVERS: "kafka1:19092,kafka2:19093,kafka3:19094"
-      CONNECT_REST_PORT: 8093
-      CONNECT_GROUP_ID: "bots"
-      CONNECT_CONFIG_STORAGE_TOPIC: "bots-storage-topic"
-      CONNECT_OFFSET_STORAGE_TOPIC: "bots-offset-topic"
-      CONNECT_STATUS_STORAGE_TOPIC: "bots-status-topic"
-      CONNECT_KEY_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_VALUE_CONVERTER: "org.apache.kafka.connect.storage.StringConverter"
-      CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect3
-      CONNECT_PLUGIN_PATH: "/usr/share/java"
-    volumes:
-      - ./botgen/logs/:/tmp/botgen/logs
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-      - kafka1
-      - kafka2
-      - kafka3
-      - schema1
-
-  kafka-connect-ui:
-    image: landoop/kafka-connect-ui:0.9.4
-    hostname: kafka-connect-ui
-    ports:
-      - "8003:8000"
-    environment:
-      CONNECT_URL: "connect1:8091,connect2:8092,connect3:8093"
-      PROXY: "true"
-    depends_on:
-      - connect1
-      - connect2
-      - connect3
+    - 2181:2181                 # Zookeeper
+    - 3030:3030                 # Landoop UI
+    - 8081-8083:8081-8083       # REST Proxy, Schema Registry, Kafka Connect ports
+    - 9581-9585:9581-9585       # JMX Ports
+    - 9092:9092                 # Kafka Broker
